--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==0.5.0
 Django==2.2.8
 django-bootstrap4==2.3.1
 django-crispy-forms==1.9.2
+django-heroku==0.3.1
 django-registration==3.1.1
 django-tinymce==3.1.0
 gunicorn==20.0.4
